Changing index.html for new portfolio user
Signed-off-by: Reuben Wedson <reubenwedson@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-    <title>Amandarenea Nemes | Journalism</title>
+    <title>Francis J. Tito | Software Development</title>
   </head>
 
   <body>
